--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -3,25 +3,20 @@
 
 <ul>
   <% if user_signed_in? %>
-    <li>
-      <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
-    </li>
 
     <li>
       Voici ton email : <%= current_user.email %>
     </li>
-
-    <li>
       <%= link_to "Secret page", static_pages_secret_path %>
     </li>
-
-    <li>
       <%= link_to "Edit email / password", edit_user_registration_path %>
+    </li>
+    <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
     </li>
 
   <% else %>
     <li>    
-      <%= link_to "Sign in", new_user_session_path %>
+      <%= link_to "Log in", new_user_session_path %>
     </li>
 
     <li>
@@ -29,4 +24,5 @@
     </li>
 
   <% end %>
+
 </ul>
