--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,44 +15,45 @@
   </head>
 
   <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Eventbrite</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="<%= events_show_path %>">Eventbrite</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item active">
-      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-link" href="<%= events_show_path %>">All Events<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="dropdown-item" href="<%=events_new_path%>">New Event</a>
-      </li>
-      <li class="nav-item">
-        <a class="dropdown-item" href="<%=new_user_registration_path%>">S'inscrire</a>
-      </li>
-      <li class="nav-item">
-        <a class="dropdown-item" href="<%=user_registration_path%>">Se connecter</a>
-      </li>
-       <li class="nav-item">
-        <a class="dropdown-item" href="<%=user_registration_path%>">Mon profil</a>
-      </li>
-       <li class="nav-item">
-        <a class="dropdown-item" href="<%=cancel_user_registration_path%>">Se déconnecter</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown link
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="<%events_new_path%>">new Event</a>
-          <a class="dropdown-item" href="<%new_user_registration_path%>">S'inscrire</a>
-          <a class="dropdown-item" href="<%user_registration_path%>">Se connecter</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
+        <a class="dropdown-item" href="<%=events_new_path%>">Create New Event</a>
       </li>
     </ul>
   </div>
+  <% unless user_signed_in? %>
+  <li class="nav-item dropdown text-black bg-light">
+    <a class="nav-link dropdown-toggle text-black bg-light" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Sign Up/Log In
+    </a>
+    <div class="dropdown-menu bg-primary text-black bg-light" aria-labelledby="navbarDropdownMenuLink">
+      <a class="dropdown-item text-black bg-light" href="<%= new_user_registration_path %>">Sign In</a>
+      <a class="dropdown-item text-black bg-light" href="<%= new_user_session_path %>">Log In</a>
+    </div>
+  </li>
+<% else %>
+  <li class="nav-item dropdown text-black bg-light">
+    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      My Profile
+    </a>
+    <div class="dropdown-menu bg-primary text-black bg-light" aria-labelledby="navbarDropdownMenuLink">
+    <a class="dropdown-item text-black bg-light" href="<%= user_session_path %>">My Profile</a>
+      <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class:"dropdown-item"%>
+    </div>
+  </li>
+<% end %>
+</ul>
+</div>
+</nav>
 </nav>
     <%= yield %>
 
