--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,9 +1,9 @@
-<div class="jumbotron text-center">
-  <h3 class="display-4">Welcome to Eventbrite!</h3>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-  <hr class="my-4">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-  <p class="lead">
+<div class="jumbotron text-center text-white">
+  <h4 class="display-4">Welcome to</h4>
+  <h1 class="display-3">Eventbrite</h1>
+  <br>
+  <p class="lead">quickly find events near you & create your new events here :</p> 
+  <br>
     <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
   </p>
 </div>
