--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
     Sign Up/Log In
     </a>
     <div class="dropdown-menu bg-primary text-black bg-light" aria-labelledby="navbarDropdownMenuLink">
-      <a class="dropdown-item text-black bg-light" href="<%= new_user_registration_path %>">Sign In</a>
+      <a class="dropdown-item text-black bg-light" href="<%= new_user_registration_path %>">Sign Up</a>
       <a class="dropdown-item text-black bg-light" href="<%= new_user_session_path %>">Log In</a>
     </div>
   </li>
