--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,32 +1,21 @@
-<!-- <h1>Eventbrite</h1> -->
-<!-- <p>Find me in app/views/events/index.html.erb</p> -->
-<ul>
+<br>
+<br>
+<center>
+<div class="card text-center" style="width: 50rem;">
+  <div class="card-header">
+    MyProfile
+  </div>
+  <div class="card-body">
   <% if user_signed_in? %>
-    <li>
-      <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
-    </li>
-
-    <li>
-      Voici ton email : <%= current_user.email %>
-    </li>
-
-    <li>
-      <%= link_to "Secret page", static_pages_secret_path %>
-    </li>
-
-    <li>
-      <%= link_to "Edit email / password", edit_user_registration_path %>
-    </li>
-
-  <% else %>
-    <li>    
-      <%= link_to "Sign in", new_user_session_path %>
-    </li>
-
-    <li>
-      <%= link_to "Sign up", new_user_registration_path %>
-    </li>
-
-  <% end %>
-</ul>
-
+    <h4 class="card-title">Here is your email : <%= current_user.email %></h4>
+    <p class="card-text"><%= link_to "Edit email / password", edit_user_registration_path %></p>
+    <div class="btn-group">
+    <%= link_to "Sign out", destroy_user_session_path, method: :delete, class:"btn btn-sm btn-primary" %>
+  </div>
+    <% else %>
+    <%= link_to "Log In", new_user_session_path, class:"btn btn-sm btn-primary"  %>
+    <%= link_to "Sign Up", new_user_registration_path, class:"btn btn-sm btn-primary"  %>
+    <% end %>
+  </div>
+</div>
+</center>
